<resources>
    <string name="app_name">EnHueco</string>

    <string name="login">Login</string>
    <string name="ingresar">Ingresar</string>
    <string name="contrasena">Contraseña</string>
    <string name="title_activity_main_tabbed">MainTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Buscar</string>
    <string name="LogOut">Salir</string>
    <string name="settings">Ajustes</string>
    <string name="MyQRCode">Mi código</string>
    <string name="addFriend">Agregar</string>
    <string name="mySchedule">Horario</string>
    <string name="new_event">Agregar</string>
    <string name="event_name">Nombre (opcional)</string>
    <string name="event_location">Ubicación (opcional)</string>
    <string name="week_days">Días</string>
    <string name="testUserName">Diego Alejandro Gomez Mosquera</string>
    <string name="requests">Solicitudes</string>
    <string name="empty_friends_label">No tienes amigos. \n Selecciona + para agregar uno</string>
    <string name="empty_requests_label">No hay solicitudes nuevas</string>

    <string-array name="weekDay_array">
        <item>Domingo</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
    </string-array>
    <string name="title_activity_select_calendar">SelectCalendarActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_friends_nearby_notifications">Amigos Cerca</string>
    <string name="pref_description_friends_nearby_notifications">Notificaciones cuando amigos están cerca y también en
        hueco.
        No utilizamos GPS, así que no gastamos tu batería.
    </string>

    <string name="pref_title_phone">Mi teléfono</string>
    <string name="pref_default_title_phone">Sin configurar</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_event_privacy">Privacidad de eventos</string>
    <string name="pref_title_groups">Grupos</string>
    <string name="action_turn_ivisible">Invisible</string>
    <string name="action_im_available">Estoy en Hueco</string>
    <string name="action_call">Llamar</string>
    <string name="action_whatsapp">WhatsApp</string>
    <string name="action_options">Opciones</string>
    <string name="pref_title_phone_number">Mi número de telefono</string>
    <string name="pref_key_phone_number">phoneNumber</string>
    <string name="pref_key_event_privacy">eventPrivacy</string>
    <string name="pref_key_shares_events_names">sharesEventNames</string>
    <string name="pref_key_shares_events_location">sharesEventLocation</string>
</resources>
