<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.enhueco.view.MainTabbedActivity">

	<item
			android:id="@+id/action_log_out"
			android:title="@string/LogOut"
			app:showAsAction="collapseActionView"
			android:onClick="logOut"/>

	<item
			android:id="@+id/action_turn_invisible"
			android:icon="@drawable/ic_invisible"
			android:title="@string/action_turn_ivisible"
			app:showAsAction="always"
			android:onClick="onTurnInvisibleButtonPressed"/>

	<item
			android:id="@+id/action_im_available"
			android:icon="@drawable/ic_im_available"
			android:title="@string/action_im_available"
			android:onClick="onImAvailableButtonPressed"
			app:showAsAction="always"/>

	<item
			android:id="@+id/action_requests"
			app:actionLayout="@layout/menu_action_item_badge"
			android:title="@string/requests"
			android:orderInCategory="100"
			app:showAsAction="ifRoom"
			android:onClick="showRequests"/>

	<item
			android:id="@+id/action_add_friend"
			android:title="@string/addFriend"
			android:orderInCategory="101"
			app:showAsAction="ifRoom"
			android:onClick="addFriend"
			android:icon="@android:drawable/ic_menu_add"
			/>

	<item
			android:id="@+id/action_search"
			android:title="@string/search"
			android:orderInCategory="102"
			app:showAsAction="ifRoom"
	        android:icon="@android:drawable/ic_menu_search"
			/>

	<item
			android:id="@+id/action_settings"
			android:title="@string/settings"
			android:orderInCategory="103"
			app:showAsAction="ifRoom"
			android:icon="@android:drawable/ic_menu_preferences"
			android:onClick="onSettingsButtonPressed"/>

</menu>
