<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<!--    <SwitchPreference
				android:key="example_switch"
				android:title="@string/pref_title_friends_nearby_notifications"
				android:summary="@string/pref_description_friends_nearby_notifications"
				android:defaultValue="true"/>
	-->

	<PreferenceCategory
			android:title="Información del usuario"
			>
		<EditTextPreference
				android:inputType="number"
				android:title="@string/pref_title_phone_number"
				android:key="@string/pref_key_phone_number"
				android:summary="Usado para llamadas y Whatsapp"
				/>
	</PreferenceCategory>

	<PreferenceCategory
			android:title="Privacidad de Eventos"
			>
		<CheckBoxPreference
				android:title="Comparte nombres"
				android:key="@string/pref_key_shares_events_names"
				android:summary="Los nombres de los eventos son visibles para los demás usuarios"
				/>
		<CheckBoxPreference
				android:title="Compartir ubicación"
				android:key="@string/pref_key_shares_events_location"
				android:summary="La ubicación de los eventos es visible para los demás usuarios"

				/>
	</PreferenceCategory>

	<!--
	<MultiSelectListPreference
			android:title="@string/pref_title_event_privacy"
			android:key="@string/pref_key_event_privacy"
			android:summary="Ajustes personalizados de los eventos"
			android:entries="@array/privacy_array"
			android:entryValues="@array/privacy_array_values"
			/>
	-->
	<!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
